--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,12 @@ dependencyManagement {
 	}
 }
 
+tasks.jar {
+	manifest {
+		attributes["Main-Class"] = "com.teste.bank.BankApplication"
+	}
+}
+
 tasks.named('test') {
 	useJUnitPlatform()
 }
